--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@ layout: default
 ---
 
 <div class="jumbotron">
-  <h1>{{ site.greeting }}</h1>
-  <p>
+  <h1><span class='highlighted'>{{ site.greeting }}</span></h1>
+  <p><span class='highlighted'>
     {{ site.description }}
+    </span>
   </p>
   <p><a class="btn btn-primary btn-lg" href="{{ site.baseurl }}/datasets" role="button">Start browsing</a></p>
 </div>
