--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="jumbotron">
   <h1><span class='highlighted'>{{ site.greeting }}</span></h1>
-  <p><span class='highlighted'>
+  <p><span class='highlightedcaption'>
     {{ site.description }}
     </span>
   </p>
