--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 </div>
 
 <div class="jumbotron" style="background-image:none;">
-  <p style="font-size:14px;">
+  <p style="font-size:16px;margin-bottom:0;">
     Form follows fucking function. Can we all just agree as the greater design community to stop fucking talking about Comic Sans altogether? It’s getting fucking old. You are not your fucking work. This design is fucking brilliant. When you sit down to work, external critics aren’t the enemy. It’s you who you must to fight against to do great fucking work. You must overcome yourself. Respect your fucking craft. To go partway is easy, but mastering anything requires hard fucking work. The details are not the details. They make the fucking design. Don’t get hung up on things that don’t fucking work. Think about all the fucking possibilities. Never let your guard down by thinking you’re fucking good enough. While having drinks with Tibor Kalman one night, he told me, &ldquo;When you make something no one hates, no one fucking loves it.&rdquo; Creativity is a fucking work-ethic. Must-do is a good fucking master. Why are you fucking reading all of this? Get back to work. If you’re not being fucking honest with yourself how could you ever hope to communicate something meaningful to someone else? Design as if your fucking life depended on it. Someday is not a fucking day 
   </p>
 </div>
