--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 
 <div class="jumbotron" style="background-image:none;">
   <p style="font-size:16px;margin-bottom:0;">
-    {{ site.explantion }}
+    {{ site.explanation }}
   </p>
 </div>
 
