--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ layout: default
     <a href="{{ site.baseurl }}/datasets/?category={{ category.name | slugify }}" class="thumbnail" title="{{ logo_alt }}">
       {% if category.logo and category.logo != empty %}
         <img src="{{ site.baseurl }}{{ category.logo }}" alt="{{ logo_alt }}">
+        <svg class="caticon">
+          <use xlink:href="{{ site.baseurl }}{{ category.logo }}"></use>
+        </svg>
       {% endif %}
       {{ category.name }}
     </a>
