re-add the categories img

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@ layout: default
     {% capture logo_alt %}{{ category.name }}{% if category.logo_credit and category.logo_credit != empty %} logo by {{ category.logo_credit }}{% endif %}{% endcapture %}
     <a href="{{ site.baseurl }}/datasets/?category={{ category.name | slugify }}" class="thumbnail" title="{{ logo_alt }}">
       {% if category.logo and category.logo != empty %}
-        <!-- <img src="{{ site.baseurl }}{{ category.logo }}" alt="{{ logo_alt }}"> -->
-        <svg class="caticon">
-          <use xlink:href="{{ site.baseurl }}{{ category.logo }}"></use>
-        </svg>
+        <img src="{{ site.baseurl }}{{ category.logo }}" alt="{{ logo_alt }}">
       {% endif %}
       {{ category.name }}
     </a>
