--- a/collaborate.html
+++ b/collaborate.html
@@ -1,7 +1,7 @@
 ---
-title: Organizations
+title: Collaborate
 layout: default
-permalink: /organizations/
+permalink: /collaborate/
 ---
 {% include breadcrumbs.html %}
 
